# cgfx2gltf

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cgltf_write.h  main.c
.github/workflows/: cmake-multi-platform.yml
libs/: cgltf.c  cgltf.h  kgflags.c  kgflags.h
src/: cgfx.c  cgfx.h  common.h  main.c  utilities.c  utilities.h
src/cgfx/: data.c  data.h  dict.c  dict.h  material.h  model.h  shader.h  texture.h
src/cgfx/pica/: etc1.c  etc1.h  shader.c  shader.h  texture.c  texture.h
